--- a/package.json
+++ b/package.json
@@ -5,13 +5,6 @@
   "main": "./lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
-    "test": "npm run lint && npm run cover",
-    "test:prod": "cross-env BABEL_ENV=production npm run test",
-    "test:only": "mocha --require babel-core/register --require babel-polyfill --recursive",
-    "test:watch": "npm test -- --watch",
-    "test:examples": "node examples/",
-    "cover": "nyc --check-coverage npm run test:only",
-    "lint": "eslint src test",
     "build": "cross-env BABEL_ENV=production babel src --out-dir lib"
   },
   "files": [
@@ -20,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tbalint19/lutzjs.git"
+    "url": "git+https://github.com/tbalint19/lutzvue.git"
   },
   "keywords": [
     "idle",
